# threat-research-mcp

./: .actrc  .coverage.Harsh-HP.34472.XQEBlEsx  .env.local.example  .gitignore  .pre-commit-config.yaml  CHANGELOG-v0.3-preview.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  INTEGRATION-COMPLETE.md  INTEGRATION-SUMMARY.md  Makefile  PHASE1-SUMMARY.md  README.md  SECURITY.md  STATUS.md  WEEK3-4-SUMMARY.md  WEEK5-6-SUMMARY.md  docker-compose.ollama.yml  docker-compose.yml  local-ci-test.ps1  operator.yaml.example  pyproject.toml  security-agent-mcp-cursor-handoff.md  security-agent-mcp_MASTER_SPEC.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  ROADMAP.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new-detection-template.md  new-hunt-template.md  new-source-adapter.md  new-tool.md
.github/workflows/: README.md  build.yml  cache-hygiene.yml  ci.yml  codeql.yml  publish.yml  security.yml
configs/: external_mcps.example.yaml  sources.example.yaml
demo/: demo.cast  make_cast.js  sapphire_sleet_demo.md  sapphire_sleet_input.txt  sapphire_sleet_iocs.csv  sapphire_sleet_navigator_layer.json  sapphire_sleet_pipeline.json  sapphire_sleet_report.html  sapphire_sleet_sigma_bundle.yml
deployment/kubernetes/: README.md
deployment/systemd/: README.md
docs/: ADDING-THREAT-ACTORS.md  FILE_INDEX.md  GRAPH-FEATURE-PLAN.md  GRAPH-QUICK-VISUAL.md  GRAPH-SUMMARY.md  INTEGRATION-ARCHITECTURE.md  INTEGRATION-QUICKSTART.md  LANGGRAPH-QUICKSTART.md  LOCAL-CI-TESTING.md  MIGRATION-V04-TO-V05.md  NEW-CHAT-PROMPT.md  OPTIONAL-INTEGRATIONS.md  PHASE1-WEEK1-2-COMPLETE.md  QUICK-REFERENCE.md  ROADMAP-V2-PLAN.md  THREAT-ACTOR-QUICK-START.md  THREAT-ACTOR-TESTING.md  TRUE-MULTI-AGENT-DESIGN.md  agent-design.md  architecture.md  automatic-technique-detection.md  canonical-schemas.md  complete-mcp-ecosystem.md  coverage-analysis.md  detection-engineering.md  evaluation.md  governance.md  ingestion.md  integration-misp.md  integration-neo4j.md  integration-opencti.md  integration-synapse.md  log-source-recommendations.md  memory-model.md  organization-adoption.md  quickstart-docker.md  quickstart-local.md  roadmap.md  safety-model.md  security-hardening.md  (+7 more)
evals/: run_test.py
examples/: demo_enhanced_analysis.py  demo_icp_c2.py  demo_langgraph_workflow.py  demo_log_sources.py  demo_threat_actor_testing.py  detection_engineering_workflow.py  run_ingestion_demo.py
examples/sample_inputs/: phishing_report.txt
playbook/: confidence_weights.yaml  keywords.yaml
scripts/: bootstrap_scaffold.py  build_attack_db.py  download_attack_stix.py  fill_empty_py.py  scrape_threat_actors.py
src/threat_research_mcp/: __main__.py  cli.py  config.py  server.py
src/threat_research_mcp/agents/: __init__.py  base_agent.py  detection_agent.py  detection_agent_v2.py  hunting_agent.py  hunting_agent_v2.py  research_agent.py  research_agent_v2.py  reviewer_agent.py
src/threat_research_mcp/coverage/: __init__.py  attack_coverage_map.py  datasource_mapper.py  gap_analysis.py  reporting.py  telemetry_gaps.py
src/threat_research_mcp/detection/: __init__.py  cross_siem_drafts.py  detection_formatter.py  detection_inventory.py  log_source_mapper.py  logic_analyzer.py  query_generator.py  rule_generator.py  rule_optimizer.py  rule_validator.py  technique_data_sources.py
src/threat_research_mcp/enrichment/: __init__.py  base.py  confidence_scorer.py  enrich.py  manager.py
src/threat_research_mcp/extensions/: __init__.py  external_mcp_catalog.py  mitre_attack_integration.py  splunk_mcp_integration.py
src/threat_research_mcp/frameworks/: __init__.py  hearth.py  peak.py  pyramid_of_pain.py  sqrrl.py  tahiti.py
src/threat_research_mcp/graph/: entities.py  ontology.py  relationships.py
src/threat_research_mcp/hunt/: __init__.py  hunt_formatter.py  hunt_planner.py  hunt_prioritizer.py  hypothesis_generator.py  telemetry_mapper.py
src/threat_research_mcp/ingestion/: __init__.py  base.py  deduper.py  errors.py  manager.py  normalizer.py  parser.py  registry.py
src/threat_research_mcp/integrations/: __init__.py  mcp_client.py
src/threat_research_mcp/memory/: __init__.py  artifact_store.py  policy.py  retriever.py  session_store.py  summarizer.py
src/threat_research_mcp/observability/: __init__.py  audit.py  metrics.py  tracing.py
src/threat_research_mcp/orchestrator/: __init__.py  analysis_product_builder.py  approvals.py  formatter.py  langgraph_orchestrator.py  policy.py  provenance_merge.py  router.py  state.py  trace.py  workflow.py
src/threat_research_mcp/playbook/: atomic_tests.yaml  confidence_weights.yaml  ioc_context_patterns.yaml
src/threat_research_mcp/policy/: data_retention.py  redaction.py  reviewer_thresholds.py  source_trust.py
src/threat_research_mcp/prompts/: coverage_review.md  detection_engineering.md  detection_review.md  hunt_generation.md  reviewer.md  source_ingestion_review.md  threat_research.md  timeline_analysis.md
src/threat_research_mcp/providers/: __init__.py  base.py  mock_provider.py  openai_provider.py
src/threat_research_mcp/resources/: __init__.py  analyst_playbooks.py  attack_data_sources.py  detection_notes.py  mitre_reference.py  sigma_style_guide.py  source_trust_registry.py
tests/: test_analysis_product_builder.py  test_attack_enrichment.py  test_attack_lookup.py  test_canonical_schemas.py  test_cross_siem_drafts.py  test_detection_agent_v2.py  test_detection_generators.py  test_enrichment.py  test_extensions_catalog.py  test_extract_iocs.py  test_html_report.py  test_hunting_agent_v2.py  test_hunting_frameworks.py  test_ingest_tools.py  test_ingestion.py  test_ingestion_manager.py  test_ingestion_parser.py  test_ingestion_rss.py  test_ingestion_taxii.py  test_ingestion_yaml.py  test_langgraph_orchestrator.py  test_log_source_mapper.py  test_mcp_integrations.py  test_new_tools.py  test_new_tools_v2.py  test_research_agent_v2.py  test_smoke.py  test_sqlite_storage.py  test_threat_actor_scenarios.py  test_validate_sigma.py  test_workflow.py  test_workflow_persist.py  threat_actor_profiles.py
tests/fixtures/: powershell_case.txt
(+119 files in other folders)
