[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "threat-research-mcp"
version = "1.0.0"
description = "Threat research MCP — feed ingestion, IOC extraction, ATT&CK mapping, hunt hypothesis generation, and detection rule generation."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Harsh Thakur" }]
dependencies = [
  "pydantic>=2.7.0",
  "PyYAML>=6.0.1",
  "mcp>=1.8.0; python_version >= '3.10'",
  "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.8.0",
  "mypy>=1.10.0",
  "bandit>=1.7.9",
  "pip-audit>=2.7.3",
  "build>=1.2.1",
  "twine>=5.1.1",
]

[project.scripts]
threat-research-mcp = "threat_research_mcp.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
omit = [
    "src/threat_research_mcp/__main__.py",
    "src/threat_research_mcp/cli.py",
    "src/threat_research_mcp/server.py",
    "src/threat_research_mcp/storage/repositories/*",
    "src/threat_research_mcp/storage/migrations.py",
    "src/threat_research_mcp/storage/models.py",
    "src/threat_research_mcp/tools/intel_storage_tools.py",
    "src/threat_research_mcp/utils/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.bandit]
exclude_dirs = ["tests", "examples"]
skips = ["B310", "B314", "B405", "B608"]
