[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "threat-research-mcp"
version = "1.0.0"
description = "Threat research MCP — IOC extraction, ATT&CK mapping, hunt hypotheses, Sigma rules, and ATT&CK Navigator layers — works with Claude Desktop, Cline, Cursor, Copilot, and any MCP-compatible client."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Harsh Thakur" }]
keywords = ["mcp", "threat-intelligence", "mitre-attack", "sigma", "detection-engineering", "cybersecurity"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
]
dependencies = [
  "pydantic>=2.7.0",
  "PyYAML>=6.0.1",
  "mcp>=1.8.0",
  "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/harshthakur6293/threat-research-mcp"
Repository = "https://github.com/harshthakur6293/threat-research-mcp"
"Bug Tracker" = "https://github.com/harshthakur6293/threat-research-mcp/issues"

[project.optional-dependencies]
attack = [
  "mitreattack-python>=3.0.0",
]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.8.0",
  "mypy>=1.10.0",
  "bandit>=1.7.9",
  "pip-audit>=2.7.3",
  "build>=1.2.1",
  "twine>=5.1.1",
]

[project.scripts]
threat-research-mcp = "threat_research_mcp.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"threat_research_mcp" = ["playbook/**/*.yaml", "playbook/**/*.yml", "playbook/siems/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
omit = [
    # Entry points — not testable as units
    "src/threat_research_mcp/__main__.py",
    "src/threat_research_mcp/cli.py",
    "src/threat_research_mcp/server.py",
    # Feed ingestion — requires real TAXII/RSS/HTTP feeds to test
    "src/threat_research_mcp/ingestion/*",
    "src/threat_research_mcp/ingestion/adapters/*",
    # Legacy hunt scaffolding — not exposed via MCP tools
    "src/threat_research_mcp/hunt/*",
    # Data schema definitions — pure dataclasses, no logic to test
    "src/threat_research_mcp/schemas/*",
    # Storage — requires SQLite setup; covered by integration omit
    "src/threat_research_mcp/storage/*",
    "src/threat_research_mcp/storage/repositories/*",
    # MCP tool wrappers that proxy to storage (require DB)
    "src/threat_research_mcp/tools/intel_storage_tools.py",
    "src/threat_research_mcp/tools/ingest_tools.py",
    # Utility helpers — no user-facing logic
    "src/threat_research_mcp/utils/*",
    # Thin tool wrappers with no testable logic beyond delegation
    "src/threat_research_mcp/tools/detection_gap_analysis.py",
    "src/threat_research_mcp/tools/reconstruct_timeline.py",
    # MISP integration — requires live MISP instance; no unit tests possible without a server
    "src/threat_research_mcp/tools/misp_bridge.py",
    # Enrichment — requires real API keys (VT, OTX, AbuseIPDB, URLhaus)
    "src/threat_research_mcp/enrichment/enrich.py",
    "src/threat_research_mcp/enrichment/__init__.py",
    "src/threat_research_mcp/tools/map_data_sources.py",
    "src/threat_research_mcp/tools/generate_detection_ideas.py",
    # Legacy detection scaffolding — not exposed via MCP tools
    "src/threat_research_mcp/detection/cross_siem_drafts.py",
    "src/threat_research_mcp/detection/rule_generator.py",
    "src/threat_research_mcp/detection/rule_optimizer.py",
    "src/threat_research_mcp/detection/rule_validator.py",
    "src/threat_research_mcp/detection/logic_analyzer.py",
    "src/threat_research_mcp/detection/detection_formatter.py",
    "src/threat_research_mcp/detection/detection_inventory.py",
    "src/threat_research_mcp/detection/log_source_mapper.py",
    "src/threat_research_mcp/detection/query_generator.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.bandit]
exclude_dirs = ["tests", "examples"]
skips = ["B310", "B314", "B405", "B608"]
